objects/Flosum__Patch__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Inherited_From_Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inherited From Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Patches</relationshipLabel>
        <relationshipName>Patches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Owner_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ OwnerId , Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items_in_Patch_Repository__c</fullName>
        <label>Total Items in Patch (Repository)</label>
        <summaryForeignKey>Flosum__Repository_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items_in_Patch__c</fullName>
        <label>Total Items in Patch</label>
        <summaryForeignKey>Flosum__Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Patch</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patches</pluralLabel>
    <recordTypes>
        <fullName>Flosum__Repository</fullName>
        <active>true</active>
        <label>Repository</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>